adding a marging top to the about section

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ header img {
 /* about section */
 
 .aboutSection {
+    margin-top: 20px;
     color: white;
     display: flex;
     background-color: #027DBF;
