--- a/style.css
+++ b/style.css
@@ -37,6 +37,53 @@ header img {
     opacity: 0.6;
 }
 
+.title {
+    margin-top: 20px;
+    width: 100%;
+    height: 70px;
+    background-color: black;
+    color: yellow;
+    font-size: 40px;
+    text-align: center;
+}
+
+.hero2 {
+    background-image: url(./images/career.jpeg);
+    background-size: cover;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.6;
+}
+
+.article2 {
+    font-family: 'Courier New', Courier, monospace;
+    margin: auto;
+    margin-top: 20px;
+    width: 90%;
+    height: auto;
+    background-color:#027dbf4d;
+    padding: 50px;
+    border-radius: 20px;
+    margin-bottom: 100px;
+}
+
+@media screen and (max-width: 768px) {
+
+    .main2 {
+        /* background-color: red; */
+        margin: 0;
+        padding: 0;
+    }
+
+    .article2 {
+        width: 95%;
+        padding: 5px;
+        text-align: justify;
+    }
+}
+
 .hero h1 {
     color: white;
     text-align: center;
