--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header img {
 }
 
 .article2 {
-    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'Courier New', Courier, monospace; */
     font-size: 20px;
     margin: auto;
     margin-top: 20px;
