--- a/style.css
+++ b/style.css
@@ -37,6 +37,29 @@ header img {
     opacity: 0.6;
 }
 
+/* slide portion */
+.slider {
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+  .slide.active {
+    opacity: 1;
+  }
+  /* end of slide portion */
+
 .title {
     margin-top: 20px;
     width: 100%;
