--- a/style.css
+++ b/style.css
@@ -28,21 +28,25 @@ header img {
 
 .hero {
     background-image: url(./images/hero.jpg);
-    background-size: cover;
+    /* background-size: cover;
     background-position: center;
     height: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
-    opacity: 0.6;
+    opacity: 0.6; */
 }
+
+
 
 /* slide portion */
 .slider {
     width: 100%;
-    height: 500px;
+    height: 300px;
     overflow: hidden;
     position: relative;
+    color: white;
+    /* margin-top: 20px; */
   }
   
   .slide {
@@ -54,11 +58,54 @@ header img {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
   }
+
+  .slide img {
+    opacity: 0.6;
+  }
+
+  .slide div {
+    background-size: cover;
+    background-position: center;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* opacity: 0.6; */
+  }
+
+  .slide h1 {
+    background-color: black;
+    padding: 20px;
+    border-radius: 10px;
+  }
   
   .slide.active {
+    opacity: 0.4;
+  }
+
+  .slide .active h1 {
     opacity: 1;
   }
+
+  .marketPlace {
+    background-image: url(./images/cash.avif);
+}
+
+.tutoring {
+    background-image: url(./images//tutoring.jpg);
+}
+
+.rating {
+    background-image: url(./images/rating.jpg) ;
+}
+
+
+
+
   /* end of slide portion */
+
+
+
 
 .title {
     margin-top: 20px;
