--- a/style.css
+++ b/style.css
@@ -77,10 +77,11 @@ header img {
     background-color: black;
     padding: 20px;
     border-radius: 10px;
+    /* opacity: 1; */
   }
   
   .slide.active {
-    opacity: 0.4;
+    opacity: 1;
   }
 
   .slide .active h1 {
@@ -98,6 +99,12 @@ header img {
 .rating {
     background-image: url(./images/rating.jpg) ;
 }
+
+.rideShare {
+    background-image: url(./images/rideshare.jpeg);
+}
+
+
 
 
 
