--- a/style.css
+++ b/style.css
@@ -70,40 +70,22 @@ header img {
     z-index: 1;
 }
 
-
-
-  
-  
-
   .slide div img {
     width: 100%;
   }
 
-  /* .slide div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0.6;
-  } */
-
-  /* .slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
-  } */
-
   .slide h1 {
-    background-color: black;
     padding: 20px;
     border-radius: 10px;
+    background-color:#027DBF;
   }
 
   .slide h1:hover {
-    background-color: red;
+    background-color:#002e47;
     cursor: pointer;
-    color: red;
+    color: white;
+    opacity: 1;
+    transition: .1s;
   }
   
   .slide.active {
