--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header img {
     position: relative;
     color: white;
     /* margin-top: 20px; */
+    /* background-color: red; */
   }
 
  .slide {
@@ -41,7 +42,7 @@ header img {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
     display: flex;
@@ -60,10 +61,34 @@ header img {
     opacity: 0.6;
   }
 
+  /* .slide img {
+    width: 100%;
+    height: 100%;
+  } */
 
 /* .hero {
     background-image: url(./images/hero.jpg);
 } */
+
+.hero {
+    background-image: url("./images/hero.jpg");
+}
+
+.marketPlace {
+    background-image: url("./images/cash.avif");
+}
+
+.tutoring {
+    background-image: url("./images/tutoring.jpg");
+}
+
+.rating {
+    background-image: url("./images/rating.jpg");
+}
+
+.rideShare {
+    background-image: url("./images/rideshare.jpg");
+}
 
 .slide h1 {
     position: absolute;
@@ -106,6 +131,22 @@ header img {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+/* mobile responsiveness */
+@media screen and (max-width: 480px) {
+    .slide img {
+        margin-top: 0px;
+    }
+
+    .slider h1 {
+        font-size: 20px;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        border-radius: 0;
+        background-color: #002e47;
+    }
 }
 
 .hero2 {
