--- a/style.css
+++ b/style.css
@@ -90,6 +90,10 @@ header img {
     background-image: url("./images/rideshare.jpg");
 }
 
+.studyGroups {
+    background-image: url("./images/study.jpg");
+}
+
 .slide h1 {
     position: absolute;
     z-index: 1;
@@ -224,36 +228,159 @@ header img {
 }
 
 .aboutSection .right {
-    padding: 50px;
+    /* padding: 50px; */
     width: 60%;   
+    /* background-color: orange; */
+}
+
+.aboutSection .right .container {
+    /* background-color: blue; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.row {
+    /* background-color: pink; */
+    display: block;
+    height: 300px;
 }
 
 .aboutSection .right img {
     width: 100%;
 }
 
+#image1 {
+    background-color: purple; 
+    margin-left: 10%; 
+    margin-top: 20px;
+}
+
+#image2 {
+    background-color: green;
+    margin-left: 19.5%; 
+    margin-top: 30px;
+}
+
+#image3 {
+    background-color: yellow; 
+    margin-left: 28%; 
+    margin-top: 40px;
+}
+
+
+
 @media screen and (max-width:768px) {
+
     .aboutSection {
         display: flex;
         flex-direction: column;
     }
 
     .aboutSection .left {
-        margin: auto;
-        width: 90%;
+        /* background-color: red; */
+        width: 100%;
     }
 
     .aboutSection .right {
+        width: 100%;
+        /* background-color: purple; */
+    }
+
+    .aboutSection .right .container {
+        width: 100%;
+        /* background-color: white; */
+        /* background-color: red; */
+        /* width: 100%; */
+        /* display: block; */
+        /* margin: 0; */
+    }
+
+    /* .aboutSection .right .container {
+        display: block;
+    } */
+
+
+    /* .right {
+        display: block;
+        background-color: green;
+    } */
+
+    /* .aboutSection {
+        display: block;
+        flex-direction: column;
+    } */
+
+    /* .aboutSection .left {
         margin: auto;
-        padding: 0;
+        width: 90%;
+    } */
+
+
+    .aboutSection .right {
+        margin: auto;
+        width: 100%;
         margin-bottom: 25px;
     }
 
-    .aboutSection .right img {
+    /* .aboutSection .right img {
         width: 100%;
         margin-top: 20px;
+    } */
+
+    /* .aboutSection .right .row {
+        background-color: pink;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        display: block;
+        left: 0;
+        margin-left: 0;
+    }  */
+
+    .row {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    #image1 {
+        background-color: purple; 
+        margin-left: 0; 
+        margin-top: 10px;
+    }
+    
+    #image2 {
+        background-color: green;
+        margin-left: 0; 
+        margin-top: 10px;
+    }
+    
+    #image3 {
+        background-color: yellow; 
+        margin-left: 0; 
+        margin-top: 10px;
     }
 }
+
+/* section for app preview images */
+.right .container {
+    width: 100%;
+    height: 90%;
+    /* background-color: blue; */
+}
+
+.right .container .row .col {
+    position:absolute;
+    width: 200px;
+    height: 250px;
+    background-color: red;
+    margin: 10px;
+}
+
+/* @media screen and {max-width: ;
+    
+} */
+
 
 .imagesSection {
     width: 100%;
@@ -329,6 +456,15 @@ article .right h2 {
         width: 90%;
         padding: 20px;
         margin: auto;
+    }
+
+    .right .container .row {
+        display: flex;
+    }
+
+    .right .container .row .col  {
+        position:relative;
+        display: flex;
     }
 }
 
