--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    /* background-color: rgba(255, 0, 0, 0.112); */
+    background-color: #E3E4E6;
 }
 
 .navbar {
@@ -544,6 +544,7 @@ article img {
         display: block;
     }
 
+
     article .left {
         width: 90%;
         margin: auto;
@@ -562,6 +563,16 @@ article img {
     .right .container .row .col  {
         position:relative;
         display: flex;
+    }
+
+    .temporary .left {
+        display: block;
+        width: 100%;
+    }
+
+    .temporary .right {
+        display: block;
+        width: 100%;
     }
 }
 
