--- a/style.css
+++ b/style.css
@@ -457,8 +457,10 @@ article {
 
 
 .temporary .left {
-    background-color: green;
+    /* background-color: green; */
     margin: 10px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .temporary .left img {
@@ -473,6 +475,8 @@ article {
 
 .temporary img {
     width: 100%;
+    max-width: 500px;
+    
 }
 
 .temporary h2 {
@@ -591,7 +595,7 @@ article img {
     article .left {
         width: 90%;
         margin: auto;
-        background-color: blue;
+        /* background-color: blue; */
         display: block;
         width: 100%;
     }
@@ -612,7 +616,7 @@ article img {
     }
 
     .temporary .left {
-        display: block;
+        /* display: block; */
         width: 100%;
     }
 
