--- a/style.css
+++ b/style.css
@@ -409,6 +409,94 @@ header img {
 /* ///////////////////////////////////////////////////////////////////////////////// */
 
 /* main section */
+
+/* @media screen and (min-width: 2000px) {
+    .navbar {
+        height: 180px;
+        font-size: 2.5em;
+    }
+
+    .navbar img {
+        width: 205px;
+    }
+
+    .slider {
+        height: 1000px;
+    }
+
+    .slider div{
+        height: 100%;
+    }
+
+    .slider h1 {
+        font-size: 7em;
+    }
+
+    .aboutSection {
+        font-size: 3em;
+        height: 1200px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .aboutSection .left h2 {
+        font-size: 2em;
+        margin-bottom: 15px;
+    }
+
+    .aboutSection .left {
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    .aboutSection img {
+        max-height: 800px;
+    }
+
+    .temporary .black h2{
+        font-size: 3em;
+    }
+
+    .temporary .black li {
+        font-size: 35px;
+    }
+
+    .temporary .red h2 {
+        font-size: 3em;
+    }
+
+    .temporary .red li {
+        font-size: 35px;
+    }
+
+    .temporary .left img {
+        height: 500px;
+        max-height: 500px;
+        max-width: 1200px;
+    }
+
+.contactForm .contactSection .container h2 {
+    font-size: 3em;
+}
+
+} */
+
+
+@media screen and (min-width: 1100px) {
+
+    .aboutSection {
+        width: 80%;
+    }
+
+    main {
+        /* background-color: red; */
+        width: 80%;
+        margin: auto;
+    }
+}
+
+
 /* main {
     width: 80%;
     margin: auto;
@@ -485,7 +573,7 @@ article {
 
 .temporary #makeMoney .right {
     /* display: none; */
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     /* background-color: red; */
 }
@@ -556,6 +644,7 @@ article img {
 .black li {
     font-size: 20px;
 }
+
 
 .red {
     background-color: rgba(255, 0, 0, 0.378);
