--- a/style.css
+++ b/style.css
@@ -220,6 +220,7 @@ header img {
 
     .temporary #makeMoney .red {
         /* bottom: 0; */
+        margin-top: 10px;
     }
 
     .temporary #miscelaneas {
@@ -738,8 +739,6 @@ article img {
 }
 @media screen and (max-width: 768px) {
 
-  
-
     article  {
         display: block;
         /* background-color: red; */
@@ -788,6 +787,25 @@ article img {
     .temporary .right {
         display: block;
         width: 100%;
+    }
+
+    .temporary .left {
+        /* display: none; */
+    }
+
+    .temporary #studyGroupsSection {
+        padding-bottom: 0;
+    }
+
+    .temporary #makeMoney {
+        /* background-color: red; */
+        margin-top: 0;
+        padding-top: 0;
+    }
+
+    .temporary #makeMoney .right {
+        /* background-color: green; */
+        padding-top: 0;
     }
 }
 
