--- a/style.css
+++ b/style.css
@@ -455,7 +455,8 @@ header img {
 
 @media screen and (max-width: 548px) {
     .aboutSection img {
-        width: 30%;
+        width: 90%;
+        margin: auto;
     }
 }
 
