--- a/style.css
+++ b/style.css
@@ -454,22 +454,32 @@ header img {
 }
 
 @media screen and (max-width: 548px) {
-    .aboutSection img {
-        width: 90%;
-        margin: auto;
-    }
-}
-
-
-@media screen and (max-width:400px) {
-    .right img {
+    
+    .aboutSection .row a {
+        /* background-color: red; */
+        padding: 0;
+        width: auto;
+        display: flex;
+        justify-content: space-around;
         width: 30%;
     }
-
-    .contactSection {
-        background-color: red;
+    
+    .aboutSection .row a img {
+        margin: 0;
+        padding: 0;
+        /* width: 33%; */
     }
+
+    .aboutSection img {
+        width: 70%;
+        margin: auto;
+        padding: 0;
+        margin: 0;
+    }
+    
 }
+
+
 
 /* .imagesSection {
     width: 100%;
